# Python-Boilerplate

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  config.yml.example  docker-compose.override.yml  docker-compose.yml  pyproject.toml
.github/workflows/: build.yml  ci.yml  lint.yml
docs/: configuration.md  gpt_appy_script_prompt_addition.txt  observability-baseline.md  observability.md
scripts/: gpt_apply_changes.py  gpt_copy.py  gpt_copy.yml  repo_state_check_gui.py
src/app/: __init__.py  config.py  health.py  http.py  logging_setup.py  main.py  main_async.py  main_sync.py  metrics.py  service_async.py  service_sync.py  startup.py
src/python_boilerplate/: __init__.py  app.py  cli.py
src/python_boilerplate/config/: __init__.py  settings.py
src/python_boilerplate/observability/: __init__.py  bootstrap.py  errors.py  logging.py  metrics.py  tracing.py
src/python_boilerplate/runtime/: __init__.py  health.py
src/python_boilerplate/services/: __init__.py  worker.py
tests/: test_cli.py  test_config.py  test_health.py  test_health_helpers.py  test_metrics.py  test_observability.py  test_observability_contract.py  test_smoke.py
