[tool.poetry]
name = "python-boilerplate"  # TODO: rename for your project
version = "0.1.0"
description = "Python service boilerplate with observability"  # TODO
authors = ["Nathaniel <hartmannlight@gmail.com>"]  # TODO: adjust when reused
readme = "README.md"
packages = [{ include = "app", from = "src" }]  # TODO: adjust if you rename the package

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.32.0"
prometheus-client = "^0.23.0"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.1"
mypy = "^1.11.2"
pytest = "^8.3.0"
coverage = "^7.6.0"
pre-commit = "^4.0.1"
httpx = "^0.27.2"

[tool.poetry.scripts]
app = "app.main:main"  # TODO: rename if you change the entrypoint

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "single"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_unreachable = true

[tool.coverage.run]
branch = true
source = ["app"]

[tool.coverage.report]
show_missing = true
